--- a/styles/main.css
+++ b/styles/main.css
@@ -55,3 +55,12 @@ html {
   .column.flow-opposite { float: right; }
   
  }
+ 
+ .clearfix::before,
+ .clearfix::after {
+    content: " ";
+    display: table;
+ }
+ 
+ .clearfix::after {
+    clear: both;
